# mixyt

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/audio/: mod.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/daemon/mediakeys/: linux.rs  macos.rs
src/db/: mod.rs
src/download/: mod.rs
src/ipc/: mod.rs
src/models/: mod.rs
src/tui/: mod.rs
