[package]
name = "mixyt"
version = "0.2.1"
edition = "2024"
description = "A CLI tool for saving, managing, and playing YouTube audio"
license = "MIT"
authors = ["David"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }

# Audio playback
rodio = "0.19"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Fuzzy search
fuzzy-matcher = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
dirs = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC
interprocess = "2"

# Media keys (platform-specific)
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.8"
zbus = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-media-player = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "mixyt"
path = "src/main.rs"
